# kotcollections

./: .coveragerc  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  test_builtin_types.py  test_of_type_vs_getitem.py
.github/workflows/: unittest.yml
docs/: API_GAP_ANALYSIS_REPORT.md  API_REFERENCE.md  KOTLIN_COMPATIBILITY_GAPS.md  kotlin_api_reference.md
kotcollections/: __init__.py  extensions.py  interfaces.py  kot_grouping.py  kot_list.py  kot_map.py  kot_mutable_list.py  kot_mutable_map.py  kot_mutable_set.py  kot_set.py  type_checker.py
kotlist/: __init__.py
python/kotcollections/: __init__.py
src/: kot_grouping.rs  kot_list.rs  kot_map.rs  kot_mutable_list.rs  kot_mutable_map.rs  kot_mutable_set.rs  kot_set.rs  lib.rs
tests/: test_circular_imports.py  test_interfaces.py  test_kot_grouping.py  test_kot_list.py  test_kot_map.py  test_kot_mutable_list.py  test_kot_mutable_map.py  test_kot_mutable_set.py  test_kot_set.py
