[project]
name = "kotcollections"
description = ""
authors = [
    { name = "Vatis", email = "vatis@lalcs.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]
dynamic = ["version"]


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry.group.dev.dependencies]
coverage = "^7.9.2"

[tool.poetry-dynamic-versioning]
enable = true
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- else -%}
        {{ '0.0.0' }}
    {%- endif -%}
"""
