[project]
name = "kotcollections"
description = "kotcollections is a Python library that fully reproduces Kotlin's Collections interfaces. It brings Kotlin's rich collection operations to Python developers with List, Set, and Map implementations."
authors = [
    { name = "Vatis", email = "vatis@lalcs.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/Lalcs/kotcollections"
"Bug Tracker" = "https://github.com/Lalcs/kotcollections/issues"
"Repository" = "https://github.com/Lalcs/kotcollections"

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "kotcollections._kotcollections"

[tool.poetry.group.dev.dependencies]
coverage = "^7.9.2"
maturin = "^1.7"
